add html and css

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <div class="nav-links">
                         <ul>
                             <li><a href="#">home</a></li>
-                            <li><a href="#">shopping</a></li>
+                            <li><a href="#">cat store</a></li>
                             <li><a href="#">contact</a></li>
                         </ul>
                     </div>
@@ -130,6 +130,35 @@
                         </div>
                         <div class="am-s-img-container">
                             <img src="./img/2.png" />
+                        </div>
+                    </div>
+                </section>
+                <section id="contact-sec">
+                    <div class="contact-container">
+                        <div class="c-img-container">
+                            <img src="./img/3.png" alt="contact me img">
+                        </div>
+                        <div class="c-infor">
+                            <div class="c-i-cta">
+                                <h2>reach out to me!</h2>
+                            </div>
+                            <div class="c-i-text">
+                                <ul>
+                                    <li>
+                                        <h4>phone number</h4>
+                                        <p>090-753-1962</p>
+                                    </li>
+                                    <li>
+                                        <h4>email address</h4>
+                                        <p>trinhminhtan27.02@gmail.com</p>
+                                    </li>
+                                    <li>
+                                        <h4>address</h4>
+                                        <p>Nha Be, Ho Chi Minh City
+                                        </p>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </section>
