--- a/index.html
+++ b/index.html
@@ -14,18 +14,29 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
             integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="crossorigin="anonymous"
             referrerpolicy="no-referrer" />
+
     </head>
     <body>
         <main>
             <nav>
                 <div id="navbar">
                     <div class="nav-logo">
-                        <h3>cat facts daily.</h3></div>
+                        <img src="./img/logo.png">
+                    </div>
                     <div class="nav-links">
                         <ul>
-                            <li><a href="#">home</a></li>
-                            <li><a href="#">cat store</a></li>
-                            <li><a href="#">contact</a></li>
+                            <li><img class="nav-links-bg"
+                                    src="./img/background-nav.png">
+                                <a href="#">home</a></li>
+                            <li>
+                                <img class="nav-links-bg"
+                                    src="./img/background-nav.png">
+                                <a href="#">cat
+                                    store</a></li>
+                            <li>
+                                <img class="nav-links-bg"
+                                    src="./img/background-nav.png">
+                                <a href="#">contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -163,11 +174,7 @@
                     </div>
                 </section>
             </div>
-
         </main>
-        <footer>
-
-        </footer>
         <script src="./app.js"></script>
     </body>
 </html>
