--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
             rel="stylesheet">
         <link rel="stylesheet" href="./style.css" />
         <link rel="stylesheet"
@@ -44,7 +44,7 @@
             <div id="main">
                 <section id="intro-sec">
                     <div class="intro-sec-container">
-                        <h1>cat facts daily</h1>
+                        <h1>daily cat facts</h1>
                         <p>Make your day with some cat pics</p>
                     </div>
                 </section>
@@ -151,7 +151,7 @@
                         </div>
                         <div class="c-infor">
                             <div class="c-i-cta">
-                                <h2>reach out to me!</h2>
+                                <h2><a href="#">reach out to me!</a></h2>
                             </div>
                             <div class="c-i-text">
                                 <ul>
