update css js api call for get facts section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <ul>
                             <li><img class="nav-links-bg"
                                     src="./img/background-nav.png">
-                                <a href="#">home</a></li>
+                                <a href="index.html">home</a></li>
                             <li>
                                 <img class="nav-links-bg"
                                     src="./img/background-nav.png">
@@ -51,15 +51,11 @@
                 <section id="facts-sec">
                     <div class="facts-sec-container">
                         <div class="facts-sec-img-container">
-                            <img src="./img/funny-cat-gifs.gif" />
+                            <img src="./img/2.png" alt="a cat picture" />
                         </div>
                         <div class="facts-sec-description">
+                            <h2>get some facts</h2>
                             <article class="f-s-d-text">
-                                <h2>get some facts</h2>
-                                <p>Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Quis, odio. Amet rerum
-                                    temporibus cupiditate obcaecati voluptatum
-                                    voluptate. Error, iste quisquam?</p>
                             </article>
                             <div class="f-s-d-button">
                                 <button type="button">new fact</button>
@@ -102,18 +98,7 @@
                                 <p>Img description</p>
                                 <img src="./img/3.png" />
                             </div>
-                            <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
-                            </div>
+
                         </div>
                     </div>
                 </section>
@@ -136,7 +121,7 @@
                                     with, but for social media and for digital
                                     entertainment, cat is legend in making
                                     us laugh. They are like alien. I love
-                                    both of them. They are just awesome</p>
+                                    both of them. They are just awesome.</p>
                             </article>
                         </div>
                         <div class="am-s-img-container">
