update html and css style

--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
                 <section id="facts-sec">
                     <div class="facts-sec-container">
                         <div class="facts-sec-img-container">
+                            <div class="f-s-i-c-frame f1"></div>
+                            <div class="f-s-i-c-frame f2"></div>
                             <img src="./img/2.png" alt="a cat picture" />
                         </div>
                         <div class="facts-sec-description">
                             <h2>get some facts</h2>
-                            <article class="f-s-d-text">
-                            </article>
+                            <p class="f-s-d-text">
+                            </p>
                             <div class="f-s-d-button">
                                 <button type="button">new fact</button>
                             </div>
