--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <div class="facts-sec-img-container">
                             <div class="f-s-i-c-frame f1"></div>
                             <div class="f-s-i-c-frame f2"></div>
-                            <img src="./img/2.png" alt="a cat picture" />
+                            <img src="" alt="a cat picture" />
                         </div>
                         <div class="facts-sec-description">
                             <h2>get some facts</h2>
@@ -77,30 +77,26 @@
                         </div>
                         <div class="c-g-c-imgs">
                             <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
+                                <img src="./img/g1.jpg" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
+                                <img src="./img/g2.jpg" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
+                                <img src="./img/g3.jpg" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
+                                <img src="./img/g4.jpg" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
+                                <img src="./img/g5.jpg" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <p>Img description</p>
-                                <img src="./img/3.png" />
+                                <img src="./img/g6.jpg" />
                             </div>
-
+                            <div class="c-g-c-img-container">
+                                <img src="./img/g7.jpg" />
+                            </div>
                         </div>
                     </div>
                 </section>
