update html/css; js api call for quote and img adjustment

--- a/index.html
+++ b/index.html
@@ -77,25 +77,32 @@
                         </div>
                         <div class="c-g-c-imgs">
                             <div class="c-g-c-img-container">
-                                <img src="./img/g1.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <img src="./img/g2.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <img src="./img/g3.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <img src="./img/g4.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <img src="./img/g5.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <img src="./img/g6.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                             <div class="c-g-c-img-container">
-                                <img src="./img/g7.jpg" />
+                                <img class="gallery-img" src=""
+                                    alt="cat img" />
                             </div>
                         </div>
                     </div>
@@ -123,15 +130,12 @@
                             </article>
                         </div>
                         <div class="am-s-img-container">
-                            <img src="./img/2.png" />
+                            <img src="./img/gcenter.png" />
                         </div>
                     </div>
                 </section>
                 <section id="contact-sec">
                     <div class="contact-container">
-                        <div class="c-img-container">
-                            <img src="./img/3.png" alt="contact me img">
-                        </div>
                         <div class="c-infor">
                             <div class="c-i-cta">
                                 <h2><a href="#">reach out to me!</a></h2>
