update responsive html css; javascript nav-bar

--- a/index.html
+++ b/index.html
@@ -1,167 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial" />
-        <title>Daily Cat Facts</title>
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link
-            href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
-            rel="stylesheet">
-        <link rel="stylesheet" href="./style.css" />
-        <link rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-            integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="crossorigin="anonymous"
-            referrerpolicy="no-referrer" />
-
-    </head>
-    <body>
-        <main>
-            <nav>
-                <div id="navbar">
-                    <div class="nav-logo">
-                        <img src="./img/logo.png">
-                    </div>
-                    <div class="nav-links">
-                        <ul>
-                            <li><img class="nav-links-bg"
-                                    src="./img/background-nav.png">
-                                <a href="index.html">home</a></li>
-                            <li>
-                                <img class="nav-links-bg"
-                                    src="./img/background-nav.png">
-                                <a href="#">cat
-                                    store</a></li>
-                            <li>
-                                <img class="nav-links-bg"
-                                    src="./img/background-nav.png">
-                                <a href="#">contact</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <div id="main">
-                <section id="intro-sec">
-                    <div class="intro-sec-container">
-                        <h1>daily cat facts</h1>
-                        <p>Make your day with some cat pics</p>
-                    </div>
-                </section>
-                <section id="facts-sec">
-                    <div class="facts-sec-container">
-                        <div class="facts-sec-img-container">
-                            <div class="f-s-i-c-frame f1"></div>
-                            <div class="f-s-i-c-frame f2"></div>
-                            <img src="" alt="a cat picture" />
-                        </div>
-                        <div class="facts-sec-description">
-                            <h2>get some facts</h2>
-                            <p class="f-s-d-text">
-                            </p>
-                            <div class="f-s-d-button">
-                                <button type="button">new fact</button>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section id="gallery-sec">
-                    <div class="cat-gallery-container">
-                        <div class="c-g-c-title">
-                            <h2>exploring more cat pics</h2>
-                            <p><i>" Lorem ipsum dolor sit amet consectetur
-                                    adipisicing elit. Fugit ad provident
-                                    consequatur, neque non iste! Earum excepturi
-                                    laborum nesciunt voluptate?
-                                    "</i></p>
-                        </div>
-                        <div class="c-g-c-imgs">
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                            <div class="c-g-c-img-container">
-                                <img class="gallery-img" src=""
-                                    alt="cat img" />
-                            </div>
-                        </div>
-                    </div>
-                </section>
-                <section id="aboutme-sec">
-                    <div class="aboutme-sec-container">
-                        <div class="am-s-description">
-                            <div class="am-s-d-title">
-                                <h2>about me</h2>
-                            </div>
-                            <div class="quote-mark">
-                                <i class="fa-solid fa-quote-right"></i>
-                            </div>
-                            <article class="am-s-d-text">
-                                <h3>This project is for fun</h3>
-                                <p>Hi, it's Tan, an animal lover, especialy dog.
-                                    You may wonder why I making this website for
-                                    cat
-                                    but not dog. It becauses just in my
-                                    oppinions, dog is really good for living
-                                    with, but for social media and for digital
-                                    entertainment, cat is legend in making
-                                    us laugh. They are like alien. I love
-                                    both of them. They are just awesome.</p>
-                            </article>
-                        </div>
-                        <div class="am-s-img-container">
-                            <img src="./img/gcenter.png" />
-                        </div>
-                    </div>
-                </section>
-                <section id="contact-sec">
-                    <div class="contact-container">
-                        <div class="c-infor">
-                            <div class="c-i-cta">
-                                <h2><a href="#">reach out to me!</a></h2>
-                            </div>
-                            <div class="c-i-text">
-                                <ul>
-                                    <li>
-                                        <h4>phone number</h4>
-                                        <p>090-753-1962</p>
-                                    </li>
-                                    <li>
-                                        <h4>email address</h4>
-                                        <p>trinhminhtan27.02@gmail.com</p>
-                                    </li>
-                                    <li>
-                                        <h4>address</h4>
-                                        <p>Nha Be, Ho Chi Minh City
-                                        </p>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial" />
+    <title>Daily Cat Facts</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
+      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <main>
+      <nav class="navbar">
+        <div class="nav-logo">
+          <img src="./img/logo.png" />
+          <div class="nav-toggle">
+            <i class="fas fa-ellipsis-h"></i>
+          </div>
+        </div>
+        <div class="nav-links-container">
+          <ul class="nav-links">
+            <li>
+              <a href="index.html">home</a>
+            </li>
+            <li>
+              <a href="#">cat store</a>
+            </li>
+            <li>
+              <a href="#">contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div id="main">
+        <section id="intro-sec">
+          <div class="intro-sec-container">
+            <div>
+              <h1>daily cat facts</h1>
+              <p>Make your day with some cat pics</p>
             </div>
-        </main>
-        <script src="./app.js"></script>
-    </body>
+          </div>
+        </section>
+        <section id="facts-sec">
+          <div class="facts-sec-container">
+            <div class="facts-sec-img-container">
+              <div class="f-s-i-c-frame f1"></div>
+              <div class="f-s-i-c-frame f2"></div>
+              <img src="" alt="a cat picture" />
+            </div>
+            <div class="facts-sec-description">
+              <h2>get some facts</h2>
+              <p class="f-s-d-text">
+                You check your cats pulse on the inside of the back thigh, where
+                the leg joins to the body. Normal for cats: 110-170 beats per
+                minute.
+              </p>
+              <div class="f-s-d-button">
+                <button type="button">new fact</button>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="gallery-sec">
+          <div class="cat-gallery-container">
+            <div class="c-g-c-title">
+              <h2>exploring more cat pics</h2>
+              <p>
+                <i
+                  >"You check your cats pulse on the inside of the back thigh,
+                  where the leg joins to the body. Normal for cats: 110-170
+                  beats per minute."</i
+                >
+              </p>
+            </div>
+            <div class="c-g-c-imgs">
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+              <div class="c-g-c-img-container">
+                <img class="gallery-img" src="" alt="cat img" />
+              </div>
+            </div>
+          </div>
+        </section>
+        <section id="aboutme-sec">
+          <div class="aboutme-sec-container">
+            <div class="am-s-description">
+              <div class="am-s-d-title">
+                <h2>about me</h2>
+              </div>
+              <div class="quote-mark">
+                <i class="fa-solid fa-quote-right"></i>
+              </div>
+              <article class="am-s-d-text">
+                <h3>This project is for fun</h3>
+                <p>
+                  Hi, it's Tan, an animal lover, especialy dogs. You may wonder
+                  why I making this website for cats but not dogs. It just
+                  because in my opinions, dogs are good for living with, but for
+                  social media and for digital entertainment, cats are legend in
+                  making us laugh. They are like aliens. I love both of them.
+                  They are both awesome.
+                </p>
+              </article>
+            </div>
+            <div class="am-s-img-container">
+              <img src="./img/gcenter.png" />
+            </div>
+          </div>
+        </section>
+        <section id="contact-sec">
+          <div class="contact-container">
+            <div class="c-c-cta">
+              <h2><a href="#">reach out to me!</a></h2>
+            </div>
+            <div class="c-c-text">
+              <ul>
+                <li>
+                  <h4>phone number</h4>
+                  <p>090-753-1962</p>
+                </li>
+                <li>
+                  <h4>email address</h4>
+                  <p>trinhminhtan27.02@gmail.com</p>
+                </li>
+                <li>
+                  <h4>address</h4>
+                  <p>Nha Be, Ho Chi Minh City</p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div>
+    </main>
+    <script src="./app.js"></script>
+  </body>
 </html>
